--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,16 +70,18 @@ const [firstPost, secondPost, thirdPost] = await getCollection('posts')
   <section class='py-16'>
     <div class='container mx-auto px-4'>
       <div
-        class='rounded-2xl mx-auto max-w-3xl bg-gradient-to-br from-pink-500/20 to-violet-500/10 p-8 sm:p-12'
+        class='rounded-2xl mx-auto text-center max-w-3xl bg-gradient-to-br from-pink-500/20 to-violet-500/10 p-8 sm:p-12'
       >
-        <h2 class='text-2xl font-bold text-gray-200 sm:text-3xl'>
+        <h2 class='text-2xl font-bold mb-4 text-gray-200 sm:text-3xl'>
           Stay Updated
         </h2>
-        <p>
+        <p class='mb-6 text-gray-200 text-balance'>
           Subscribe to our newsletter to receive the latest articles, tutorials,
           and updates directly in your inbox.
         </p>
-        <div class='flex flex-col sm:flex-row mx-auto max-w-md gap-3'>
+        <div
+          class='flex flex-col justify-between sm:flex-row mx-auto max-w-md gap-3'
+        >
           <input type='text' />
           <button>Subscribe</button>
         </div>
