--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,11 @@ const buttonStyle =
         <div
           class='flex flex-col justify-between sm:flex-row mx-auto max-w-md gap-3'
         >
-          <input type='text' />
+          <input
+            placeholder='Enter your email'
+            type='email'
+            class='flex-1 rounded-full bg-gray-900 px-4 py-2.5 text-gray-200 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-pink-500/50 transition-shadow duration-150'
+          />
           <button type='button' class:list={[buttonStyle, 'cursor-pointer']}
             >Subscribe</button
           >
