--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -9,5 +9,5 @@ const { tags } = Astro.props
 ---
 
 <div class='flex flex-wrap self-start gap-2'>
-  {tags.slice(0, 2).map(tag => <Badge tag={tag} />)}
+  {tags.map(tag => <Badge tag={tag} />)}
 </div>
