--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
+import { getCollection } from 'astro:content'
 import BlogCard from '@components/BlogCard.astro'
 import ArrowRight from '@icons/ArrowRight.astro'
 import BaseLayout from '@layouts/BaseLayout.astro'
-import { getCollection } from 'astro:content'
 
 const [firstPost, secondPost, thirdPost] = await getCollection('posts')
 const buttonStyle =
@@ -26,10 +26,8 @@ const buttonStyle =
           Thoughtful articles, tutorials, and perspectives on web development,
           design, and the latest tech trends.
         </p>
-        <div
-          class='flex flex-col gap-4 sm:flex-row items-center justify-center'
-        >
-          <a href='/blog' class='text-base' class:list={[buttonStyle]}
+        <div class='flex gap-4 items-center justify-center'>
+          <a href='/blog' class:list={[buttonStyle, 'text-sm']}
             >Explore Article</a
           >
           <a
@@ -91,6 +89,9 @@ const buttonStyle =
             >Subscribe</button
           >
         </div>
+        <p class='mt-4 text-xs text-gray-400'>
+          We respect your privacy. Unsubscribe at any time.
+        </p>
       </div>
     </div>
   </section>
