feat: update Badge component to remove visibility constraints and improve tag display

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -7,7 +7,8 @@ const { tag } = Astro.props
 ---
 
 <span
-  class='capitalize rounded-full px-3 py-1 bg-pink-500/10 text-pink-400 text-xs font-medium inline-block nth-[n+3]:hidden md:nth-[n+4]:hidden md:nth-[-n+3]:block'
+  id='tag'
+  class='capitalize rounded-full px-3 py-1 bg-pink-500/10 text-pink-400 text-xs font-medium inline-block'
 >
   {tag}
 </span>
