feat: simplify tag visibility logic in TagsList component for improved performance

--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -38,7 +38,7 @@ const { tags, id } = Astro.props
       currentWidth += tagWidth
 
       // if the tag is too wide, hide last tag
-      if (currentWidth > containerWidth && index > 0) {
+      if (currentWidth > containerWidth) {
         tag.style.display = 'none'
       }
     })
