feat: enhance Footer component with gradient background and border for improved aesthetics

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,9 @@ const PLATFORMS = [
 ]
 ---
 
-<footer class='p-4 bg-slate-800 text-white'>
+<footer
+  class='border-t-2 border-slate-500/30 bg-gradient-to-r from-gray-900 to-gray-950 p-4 bg-slate-800 text-white'
+>
   <p class='flex gap-2'>
     {
       PLATFORMS.map(({ name, username, icon: Icon }) => (
