feat: update Badge component styling for improved appearance and consistency

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -8,7 +8,7 @@ const { tag } = Astro.props
 
 <span
   id='tag'
-  class='capitalize rounded-full px-3 py-1 bg-pink-500/10 text-pink-400 text-xs font-medium inline-block'
+  class='capitalize rounded-lg px-2 py-1 bg-pink-500/10 text-pink-400 text-xs font-medium inline-block border border-slate-500/30'
 >
   {tag}
 </span>
