--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -13,7 +13,7 @@ const { tags, id } = Astro.props
   {tags.map(tag => <Badge tag={tag} />)}
   <span
     id='more-tag'
-    class='rounded-full text-xs font-medium p-1 shrink-0 grow-0 bg-pink-500/10'
+    class='rounded-lg text-xs font-medium px-2 py-1 border border-slate-500/30 bg-pink-500/10'
     style={{ display: 'none' }}></span>
 </div>
 
