--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,6 +84,7 @@ const buttonStyle =
             placeholder='Enter your email'
             name='email'
             type='email'
+            autocomplete='off'
             class='flex-1 rounded-full bg-gray-900 px-4 py-2.5 text-gray-200 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-pink-500/50 transition-shadow duration-150'
           />
           <button type='button' class:list={[buttonStyle, 'cursor-pointer']}
