--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,12 +5,16 @@ import BaseLayout from '@layouts/BaseLayout.astro'
 <BaseLayout title='Blog'>
   <div class='container mx-auto px-4 py-12'>
     <div class='mx-auto max-w-4xl'>
-      <div class='flex flex-col'>
+      <div class='flex flex-col mb-10 items-center text-center'>
         <h1
-          class='bg-gradient-to-r from-pink-400 to-violet-500 text-transparent bg-blend-color'
+          class='mb-4 bg-gradient-to-r from-pink-500 to-violet-500 text-transparent bg-clip-text text-4xl font-bold sm:text-5xl py-2'
         >
           The Blog
         </h1>
+        <p class='max-w-2xl text-lg text-gray-300'>
+          Explore our latest articles, tutorials, and insights on web
+          development, design, and technology.
+        </p>
       </div>
     </div>
   </div>
