feat: fetch and flatten tags from blog posts for enhanced content management

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,10 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
+import { getCollection } from 'astro:content'
+
+const post = await getCollection('posts')
+
+const tags = post.flatMap(({ data: { tags } }) => tags)
 ---
 
 <BaseLayout title='Blog'>
