--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,15 +1,34 @@
 ---
+import BaseLayout from '@layouts/BaseLayout.astro'
+import { convertToSlug } from '@lib/utils'
 import type { GetStaticPaths } from 'astro'
+import { render } from 'astro:content'
 import { getCollection } from 'astro:content'
+
 export const getStaticPaths = (async () => {
   const posts = await getCollection('posts')
 
   return posts.map(article => ({
-    params: { slug: article.data.title },
+    params: { slug: convertToSlug(article.data.title) },
     props: { article },
   }))
 }) satisfies GetStaticPaths
 
-const { slug } = Astro.params
 const { article } = Astro.props
+const { data } = article
+const { Content } = await render(article)
 ---
+
+<BaseLayout title={data.title}>
+  <div
+    transition:name={`img-${article.slug}`}
+    class='container mx-auto max-w-4xl px-4 py-8'
+  >
+    <img src={data.image.url} alt={data.image.alt} />
+    <Content />
+    <footer>
+      <p>© {new Date().getFullYear()} My Blog. All rights reserved.</p>
+      <p>Follow us on social media!</p>
+    </footer>
+  </div>
+</BaseLayout>
