--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 ---
 import Navigation from '@components/Navigation.astro'
 import AstroLogo from '@icons/AstroLogo.astro'
-import Hamburger from './Hamburger.astro'
+import Hamburger from '@components/Hamburger.astro'
 ---
 
-<header class='bg-gradient-to-r from-gray-900 to-gray-950 sticky top-0'>
+<header class='bg-gradient-to-r from-gray-900 to-gray-950 sticky top-0 z-10'>
   <div
     class='flex flex-col md:flex-row items-center justify-between md:px-4 border-b-0 md:border-b-2 border-slate-500/30'
   >
