--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,8 @@
 import NavLinks from '@components/NavLinks.astro'
 ---
 
-<nav class='w-full md:w-auto'>
+<nav
+  class='absolute top-full w-full md:static md:w-auto bg-gradient-to-r from-gray-900 to-gray-950 md:bg-none'
+>
   <NavLinks />
 </nav>
