--- a/src/components/NavLinks.astro
+++ b/src/components/NavLinks.astro
@@ -11,12 +11,12 @@ const { pathname } = Astro.url
 
 <ul
   id='nav-bar'
-  class='md:gap-1 hidden md:flex flex-col md:flex-row p-4 md:p-0 border-b-2 border-slate-500/30 md:border-b-0'
+  class='md:gap-1 hidden h-0 opacity-0 md:opacity-100 md:h-auto md:flex flex-col md:flex-row md:p-0 border-b-2 border-slate-500/30 md:border-b-0'
 >
   {
     LINKS.map(link => {
       return (
-        <li class='inline-flex items-center md:justify-center text-gray-200 hover:text-pink-400 cursor-pointer transition-colors duration-200'>
+        <li class='inline-flex items-center px-4 first:pt-4 last:pb-4 md:px-0 md:first:pt-0 md:last:pb-0 md:justify-center text-gray-200 hover:text-pink-400 cursor-pointer transition-colors duration-200'>
           <a
             data-link={link.href}
             href={link.href}
@@ -52,7 +52,22 @@ const { pathname } = Astro.url
 </script>
 
 <style>
+  ul {
+    interpolate-size: allow-keywords;
+
+    transition:
+      height 0.3s,
+      opacity 0.3s,
+      display 0.3s allow-discrete;
+  }
   .expanded-navbar {
     display: flex;
+    height: auto;
+    opacity: 1;
+
+    @starting-style {
+      height: 0;
+      opacity: 0;
+    }
   }
 </style>
