feat: implement dynamic pagination for blog posts to enhance navigation

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -3,12 +3,13 @@ import type { GetStaticPaths } from 'astro'
 import BlogCard from '@components/BlogCard.astro'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getCollection } from 'astro:content'
+import { generatePagination } from '@lib/utils'
 
 export const getStaticPaths = (async ({ paginate }) => {
   const post = await getCollection('posts')
 
   return paginate(post, {
-    pageSize: 9,
+    pageSize: 1,
   })
 }) satisfies GetStaticPaths
 
@@ -42,21 +43,24 @@ const sortedData = data.toSorted(
     </div>
     <div class='flex justify-center space-x-4'>
       {
-        page.url.prev && (
-          <a href={page.url.prev} class='btn'>
-            previous
-          </a>
-        )
-      }
-      {
-        page.url.next && (
-          <a
-            href={page.url.next}
-            class='text-gray-200 bg-pink-500/10 rounded-full text-sm font-medium px-4 py-2'
-          >
-            next
-          </a>
-        )
+        generatePagination({
+          currentPage: page.currentPage,
+          totalPages: page.lastPage,
+        }).map(numberPage => {
+          return (
+            <a
+              href={`/blog${numberPage === 1 ? '' : `/${numberPage}`}`}
+              class:list={[
+                {
+                  'bg-pink-500/10 text-pink-500':
+                    numberPage === page.currentPage,
+                },
+              ]}
+            >
+              {numberPage}
+            </a>
+          )
+        })
       }
     </div>
   </div>
