feat: replace img tag with Image component for optimized image handling and added width/height attributes

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { convertToSlug } from '@lib/utils'
 import type { GetStaticPaths } from 'astro'
+import { Image } from 'astro:assets'
 import { render } from 'astro:content'
 import { getCollection } from 'astro:content'
 
@@ -24,7 +25,12 @@ const { Content } = await render(article)
     transition:name={`img-${article.slug}`}
     class='container mx-auto max-w-4xl px-4 py-8'
   >
-    <img src={data.image.url} alt={data.image.alt} />
+    <Image
+      src={data.image.url}
+      alt={data.image.alt}
+      width={data.image.width}
+      height={data.image.height}
+    />
     <Content />
     <footer>
       <p>© {new Date().getFullYear()} My Blog. All rights reserved.</p>
