--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -21,10 +21,7 @@ const { Content } = await render(article)
 ---
 
 <BaseLayout title={data.title}>
-  <div
-    transition:name={`img-${article.slug}`}
-    class='container mx-auto max-w-4xl px-4 py-8'
-  >
+  <div class='container mx-auto max-w-4xl px-4 py-8'>
     <Image
       src={data.image.url}
       alt={data.image.alt}
