--- a/src/icons/ChevronLeft.astro
+++ b/src/icons/ChevronLeft.astro
@@ -18,6 +18,7 @@ const props = Astro.props
   stroke-linejoin='round'
   {...props}
 >
+  <title>Chevron Left</title>
   <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
   <path d='M15 6l-6 6l6 6'></path>
 </svg>
