--- a/src/icons/ChevronRight.astro
+++ b/src/icons/ChevronRight.astro
@@ -18,6 +18,7 @@ const props = Astro.props
   stroke-linejoin='round'
   {...props}
 >
+  <title>Chevron Right</title>
   <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
   <path d='M9 6l6 6l-6 6'> </path>
 </svg>
