--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,14 +8,14 @@ const PLATFORMS = [
     name: 'GitHub',
     url: 'https://github.com',
     username: 'Fran-TP',
-    icon: Github,
+    icon: Github
   },
   {
     name: 'X',
     url: 'https://x.com',
     username: '_Fran_Torres_',
-    icon: X,
-  },
+    icon: X
+  }
 ]
 ---
 
