--- a/src/components/NavLinks.astro
+++ b/src/components/NavLinks.astro
@@ -3,7 +3,7 @@ const LINKS = [
   { href: '/', name: 'Home' },
   { href: '/about', name: 'About' },
   { href: '/blog', name: 'Blog' },
-  { href: '/tags', name: 'Tags' },
+  { href: '/tags', name: 'Tags' }
 ]
 
 const { pathname } = Astro.url
