--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,9 +1,9 @@
 ---
+import type { CollectionEntry } from 'astro:content'
 import ChevronLeft from '@icons/ChevronLeft.astro'
 import ChevronRight from '@icons/ChevronRight.astro'
 import { generatePagination } from '@lib/utils'
 import type { Page } from 'astro'
-import type { CollectionEntry } from 'astro:content'
 
 interface Props {
   pageEntry: Page<CollectionEntry<'posts'>>
@@ -12,7 +12,7 @@ interface Props {
 const { pageEntry: page } = Astro.props
 const initializePagination = generatePagination({
   currentPage: page.currentPage,
-  totalPages: page.lastPage,
+  totalPages: page.lastPage
 })
 
 const commonButtonStyle =
